[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/modals/MainMenuModal.gd" type="Script" id=1]
[ext_resource path="res://ui/themes/button_hover_stylebox.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/themes/button_pressed_stylebox.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/themes/button_stylebox.tres" type="StyleBox" id=4]
[ext_resource path="res://fonts/tomorrow/tomorrow_regular_16.tres" type="DynamicFont" id=5]

[node name="MainMenuModal" type="VBoxContainer"]
margin_left = 32.0
margin_top = 53.0
margin_right = 224.0
margin_bottom = 203.0
rect_min_size = Vector2( 192, 0 )
custom_constants/separation = 20
script = ExtResource( 1 )

[node name="NewGameButton" type="Button" parent="."]
margin_right = 192.0
margin_bottom = 14.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "New Game"

[node name="ContinueButton" type="Button" parent="."]
margin_top = 34.0
margin_right = 192.0
margin_bottom = 48.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Continue"

[node name="StageSelectButton" type="Button" parent="."]
visible = false
margin_top = 68.0
margin_right = 192.0
margin_bottom = 82.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Select Stage"

[node name="OptionsButton" type="Button" parent="."]
margin_top = 68.0
margin_right = 192.0
margin_bottom = 82.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Options"

[node name="ExitButton" type="Button" parent="."]
margin_top = 102.0
margin_right = 192.0
margin_bottom = 116.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Quit"
